WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238320
[GTK] REGRESSION(
r291613
): Build broken with USE_GTK4 + ENABLE_ACCESSIBILITY
https://bugs.webkit.org/show_bug.cgi?id=238320
Summary
[GTK] REGRESSION(r291613): Build broken with USE_GTK4 + ENABLE_ACCESSIBILITY
Adrian Perez
Reported
2022-03-24 04:35:56 PDT
The issue is reproducible with: cmake -S. -Bbuild -GNinja \ -DPORT=GTK -DUSE_GTK4=ON -DENABLE_ACCESSIBILITY=ON \ && ninja -Cbuild
Attachments
Patch
(3.14 KB, patch)
2022-03-24 04:38 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2022-03-24 04:38:49 PDT
Created
attachment 455631
[details]
Patch
EWS
Comment 2
2022-03-24 06:05:09 PDT
Committed
r291792
(
248820@main
): <
https://commits.webkit.org/248820@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455631
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-03-24 06:06:16 PDT
<
rdar://problem/90763124
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug