[GTK] REGRESSION(r291613): Build broken with USE_GTK4 + ENABLE_ACCESSIBILITY https://bugs.webkit.org/show_bug.cgi?id=238320

Reviewed by Carlos Garcia Campos.

Guard remaning uses of ATK when building with GTK4, where ATK is not used at all.

* UIProcess/API/glib/WebKitWebViewAccessible.cpp:
* UIProcess/API/glib/WebKitWebViewAccessible.h:
* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseDispose):



Canonical link: https://commits.webkit.org/248820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291792 268f45cc-cd09-0410-ab3c-d52691b4dbfc