Source/WebKit/UIProcess/API/glib/WebKitWebViewAccessible.h
@@ -19,7 +19,7 @@
 
 #pragma once
 
-#if ENABLE(ACCESSIBILITY)
+#if ENABLE(ACCESSIBILITY) && !USE(GTK4)
 
 #include <atk/atk.h>
 
